--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -99,13 +99,24 @@ h3 {
   position: relative;
 }
 
-.reminder .close {
+.reminder .edit {
   position: absolute;
   top: 10px;
   right: 15px;
   cursor: pointer;
   border: none;
   background: none;
+  font-size: 1.3rem;
+}
+
+.reminder .delete{
+  position: absolute;
+  bottom: 10px;
+  right: 15px;
+  cursor: pointer;
+  border: none;
+  background: none;
+  font-size: 1.3rem;
 }
 
 .form,
